add TCN deep learning model

--- a/GEM-Details.ipynb
+++ b/GEM-Details.ipynb
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 95.97it/s]\n"
+      "100%|██████████| 16/16 [00:00<00:00, 55.39it/s]\n"
      ]
     },
     {
@@ -30,18 +30,19 @@
      "output_type": "stream",
      "text": [
       "=================== The required libraries have been  installed ===================\n",
+      "%pylab is deprecated, use %matplotlib inline and import the required libraries.\n",
       "Populating the interactive namespace from numpy and matplotlib\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c39af2d473c24e5381f9d45465a28703",
+       "model_id": "73779f8539ed4115847094c3f257e1a4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='file', options=(('220519_09-47-50-Home1', '220519_09-47-50-Home1')…"
+       "interactive(children=(Dropdown(description='file', options=(('220811_17-23-51-Home1-s=2', '220811_17-23-51-Hom…"
       ]
      },
      "metadata": {},
@@ -74,7 +75,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.13 (conda)",
    "language": "python",
    "name": "python3"
   },
@@ -88,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
@@ -131,6 +132,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0f91b223a9be7f82bfd164eb4b10e5e1c532d3ceac636b749a2ce370dda12911"
+   }
   }
  },
  "nbformat": 4,
