--- a/result_viewer-actplot.ipynb
+++ b/result_viewer-actplot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-26T23:24:22.348205Z",
@@ -14,6 +14,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "%pylab is deprecated, use %matplotlib inline and import the required libraries.\n",
       "Populating the interactive namespace from numpy and matplotlib\n"
      ]
     },
@@ -21,205 +22,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "File 201026_19-23-06-A4H can not import\n",
-      "Ran out of input\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 109, in loader\n",
-      "    try:\n",
-      "TypeError: list indices must be integers or slices, not str\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 114, in loader\n",
-      "    # disp_name='dataset:%s date:%s %s'%(run_info['dataset'],run_info['run_date'], evalres[0].shortrunname)\n",
-      "  File \"/workspace/UnifiedAR/general/utils.py\", line 162, in loadState\n",
-      "    # if(name=='data'):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/compress_pickle.py\", line 341, in load\n",
-      "    **version_dependent_kwargs,\n",
-      "EOFError: Ran out of input\n",
-      "File cache can not import\n",
-      "[Errno 2] No such file or directory: 'save_data/cache/data.pkl.lz4'\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 108, in loader\n",
-      "  File \"/workspace/UnifiedAR/general/utils.py\", line 162, in loadState\n",
-      "    # if(name=='data'):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/compress_pickle.py\", line 318, in load\n",
-      "    **kwargs,\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/utils.py\", line 411, in preprocess_path\n",
-      "    **kwargs\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/utils.py\", line 505, in open_compression_stream\n",
-      "    io_stream = lz4.frame.open(stream, mode=mode, **kwargs)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/lz4/frame/__init__.py\", line 831, in open\n",
-      "    return_bytearray=return_bytearray,\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/lz4/frame/__init__.py\", line 510, in __init__\n",
-      "    self._fp = builtins.open(filename, mode)\n",
-      "FileNotFoundError: [Errno 2] No such file or directory: 'save_data/cache/info.pkl.lz4'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 114, in loader\n",
-      "    # disp_name='dataset:%s date:%s %s'%(run_info['dataset'],run_info['run_date'], evalres[0].shortrunname)\n",
-      "  File \"/workspace/UnifiedAR/general/utils.py\", line 162, in loadState\n",
-      "    # if(name=='data'):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/compress_pickle.py\", line 318, in load\n",
-      "    **kwargs,\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/utils.py\", line 411, in preprocess_path\n",
-      "    **kwargs\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/utils.py\", line 505, in open_compression_stream\n",
-      "    io_stream = lz4.frame.open(stream, mode=mode, **kwargs)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/lz4/frame/__init__.py\", line 831, in open\n",
-      "    return_bytearray=return_bytearray,\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/lz4/frame/__init__.py\", line 510, in __init__\n",
-      "    self._fp = builtins.open(filename, mode)\n",
-      "FileNotFoundError: [Errno 2] No such file or directory: 'save_data/cache/data.pkl.lz4'\n",
-      "File testdata can not import\n",
-      "string indices must be integers\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 108, in loader\n",
-      "  File \"/workspace/UnifiedAR/general/utils.py\", line 162, in loadState\n",
-      "    # if(name=='data'):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/compress_pickle.py\", line 318, in load\n",
-      "    **kwargs,\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/utils.py\", line 411, in preprocess_path\n",
-      "    **kwargs\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/utils.py\", line 505, in open_compression_stream\n",
-      "    io_stream = lz4.frame.open(stream, mode=mode, **kwargs)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/lz4/frame/__init__.py\", line 831, in open\n",
-      "    return_bytearray=return_bytearray,\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/lz4/frame/__init__.py\", line 510, in __init__\n",
-      "    self._fp = builtins.open(filename, mode)\n",
-      "FileNotFoundError: [Errno 2] No such file or directory: 'save_data/testdata/info.pkl.lz4'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 118, in loader\n",
-      "    logger.warn('File %s can not import'%item)\n",
-      "TypeError: string indices must be integers\n",
-      "File ward-b can not import\n",
-      "string indices must be integers\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 108, in loader\n",
-      "  File \"/workspace/UnifiedAR/general/utils.py\", line 162, in loadState\n",
-      "    # if(name=='data'):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/compress_pickle.py\", line 318, in load\n",
-      "    **kwargs,\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/utils.py\", line 411, in preprocess_path\n",
-      "    **kwargs\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/utils.py\", line 505, in open_compression_stream\n",
-      "    io_stream = lz4.frame.open(stream, mode=mode, **kwargs)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/lz4/frame/__init__.py\", line 831, in open\n",
-      "    return_bytearray=return_bytearray,\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/lz4/frame/__init__.py\", line 510, in __init__\n",
-      "    self._fp = builtins.open(filename, mode)\n",
-      "FileNotFoundError: [Errno 2] No such file or directory: 'save_data/ward-b/info.pkl.lz4'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 118, in loader\n",
-      "    logger.warn('File %s can not import'%item)\n",
-      "TypeError: string indices must be integers\n",
-      "File ward-a can not import\n",
-      "string indices must be integers\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 108, in loader\n",
-      "  File \"/workspace/UnifiedAR/general/utils.py\", line 162, in loadState\n",
-      "    # if(name=='data'):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/compress_pickle.py\", line 318, in load\n",
-      "    **kwargs,\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/utils.py\", line 411, in preprocess_path\n",
-      "    **kwargs\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/utils.py\", line 505, in open_compression_stream\n",
-      "    io_stream = lz4.frame.open(stream, mode=mode, **kwargs)\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/lz4/frame/__init__.py\", line 831, in open\n",
-      "    return_bytearray=return_bytearray,\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/lz4/frame/__init__.py\", line 510, in __init__\n",
-      "    self._fp = builtins.open(filename, mode)\n",
-      "FileNotFoundError: [Errno 2] No such file or directory: 'save_data/ward-a/info.pkl.lz4'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 118, in loader\n",
-      "    logger.warn('File %s can not import'%item)\n",
-      "TypeError: string indices must be integers\n",
-      "File 200515_23-58-43-A4H can not import\n",
-      "Ran out of input\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 109, in loader\n",
-      "    try:\n",
-      "TypeError: list indices must be integers or slices, not str\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 114, in loader\n",
-      "    # disp_name='dataset:%s date:%s %s'%(run_info['dataset'],run_info['run_date'], evalres[0].shortrunname)\n",
-      "  File \"/workspace/UnifiedAR/general/utils.py\", line 162, in loadState\n",
-      "    # if(name=='data'):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/compress_pickle.py\", line 341, in load\n",
-      "    **version_dependent_kwargs,\n",
-      "EOFError: Ran out of input\n",
-      "File 200515_23-56-13-A4H can not import\n",
-      "Ran out of input\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 109, in loader\n",
-      "    try:\n",
-      "TypeError: list indices must be integers or slices, not str\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 114, in loader\n",
-      "    # disp_name='dataset:%s date:%s %s'%(run_info['dataset'],run_info['run_date'], evalres[0].shortrunname)\n",
-      "  File \"/workspace/UnifiedAR/general/utils.py\", line 162, in loadState\n",
-      "    # if(name=='data'):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/compress_pickle.py\", line 341, in load\n",
-      "    **version_dependent_kwargs,\n",
-      "EOFError: Ran out of input\n",
-      "File 200515_16-33-26-A4H can not import\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Compressed file ended before the end-of-stream marker was reached\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 109, in loader\n",
-      "    try:\n",
-      "TypeError: list indices must be integers or slices, not str\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/workspace/UnifiedAR/result_analyse/resultloader.py\", line 114, in loader\n",
-      "    # disp_name='dataset:%s date:%s %s'%(run_info['dataset'],run_info['run_date'], evalres[0].shortrunname)\n",
-      "  File \"/workspace/UnifiedAR/general/utils.py\", line 162, in loadState\n",
-      "    # if(name=='data'):\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/compress_pickle/compress_pickle.py\", line 341, in load\n",
-      "    **version_dependent_kwargs,\n",
-      "  File \"/opt/conda/lib/python3.6/site-packages/lz4/frame/__init__.py\", line 618, in peek\n",
-      "    return self._buffer.peek(size)\n",
-      "  File \"/opt/conda/lib/python3.6/_compression.py\", line 68, in readinto\n",
-      "    data = self.read(len(byte_view))\n",
-      "  File \"/opt/conda/lib/python3.6/_compression.py\", line 99, in read\n",
-      "    raise EOFError(\"Compressed file ended before the \"\n",
-      "EOFError: Compressed file ended before the end-of-stream marker was reached\n"
+      "File meta_dataset 220806_13-01-55-Home1-s=0 4 can not import!\n",
+      "File meta_dataset 220806_13-01-55-Home1-s=0 3 can not import!\n",
+      "File meta_dataset 220806_13-01-55-Home1-s=0 2 can not import!\n",
+      "File meta_dataset 220806_13-01-55-Home1-s=0 1 can not import!\n",
+      "File meta_dataset 220806_13-01-55-Home1-s=0 0 can not import!\n",
+      "File meta_dataset 220806_12-12-50-Home1-s=0 0 can not import!\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8321b49c1a90473eb2faffff59fed832",
+       "model_id": "481ca74c2a1946b3bfb6e42f65716f78",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='file', options=(('dataset:Home1 date:201026_18-23-50 SimplePreproc…"
+       "interactive(children=(Dropdown(description='file', options=((\"220809_17-13-51-Home1-s=2:f1=0.42==SimplePreproc…"
       ]
      },
      "metadata": {},
@@ -363,7 +182,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.13",
    "language": "python",
    "name": "python3"
   },
@@ -377,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
@@ -420,6 +239,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0f91b223a9be7f82bfd164eb4b10e5e1c532d3ceac636b749a2ce370dda12911"
+   }
   }
  },
  "nbformat": 4,
