--- a/All.ipynb
+++ b/All.ipynb
@@ -15,20 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-11-23T10:55:41.517374Z",
      "start_time": "2021-11-23T10:55:39.391992Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 125.01it/s]\n"
+      "100%|██████████| 16/16 [00:00<00:00, 816.04it/s]\n"
      ]
     },
     {
@@ -41,12 +40,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c73d0e09fb2145a5a020d27051b5e9b0",
+       "model_id": "e93ee4b258ae4cdcae76b2eff479c246",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='segmentation', options={\"FixedEventWindow [{'var': 'size', 'min': …"
+       "interactive(children=(Dropdown(description='segmentation', options={\"FixedEventWindow [{'size': 25}, {'shift':…"
       ]
      },
      "metadata": {},
@@ -54,8 +53,14 @@
     }
    ],
    "source": [
+    "import tensorflow as tf\n",
+    "tf.config.set_visible_devices([], 'GPU')\n",
+    "import general.utils as utils\n",
+    "utils.reload()\n",
+    "\n",
     "import general.libinstall\n",
     "import general.uiutils\n",
+    "\n",
     "general.uiutils.runPipelineUI()"
    ]
   },
@@ -69,32 +74,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-11-12T16:44:59.326471Z",
      "start_time": "2021-11-12T16:44:58.070360Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 16/16 [00:00<00:00, 26.44it/s]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2021-11-12 16:44:58,071] pyplot.py  switch_backend DEBUG    Loaded backend module://matplotlib_inline.backend_inline version unknown.\n",
-      "Populating the interactive namespace from numpy and matplotlib\n"
+      "=================== The required libraries have been  installed ===================\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c66559f7eac74954b7148cd4cecb6c17",
+       "model_id": "fb7be468bd7a45b48cfae10a129ab4f5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='file', options=(('211112_16-41-35-Home1', '211112_16-41-35-Home1')…"
+       "interactive(children=(Dropdown(description='file', options=(('220815_02-09-05-Home1-s=2', '220815_02-09-05-Hom…"
       ]
      },
      "metadata": {},
@@ -104,7 +114,7 @@
    "source": [
     "import general.libinstall\n",
     "import general.uiutils\n",
-    "%pylab inline\n",
+    "%matplotlib inline\n",
     "general.uiutils.loadGemMetricUI()"
    ]
   },
@@ -118,27 +128,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-11-15T17:10:28.980433Z",
      "start_time": "2021-11-15T17:10:28.932900Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 16/16 [00:00<00:00, 991.33it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2021-11-15 17:10:28,934] pyplot.py  switch_backend DEBUG    Loaded backend module://matplotlib_inline.backend_inline version unknown.\n",
-      "Populating the interactive namespace from numpy and matplotlib\n"
+      "=================== The required libraries have been  installed ===================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d3216b65cdb434d9d00a039b1a56449",
+       "model_id": "2c50d3b6b1384821b97793bb2f7f5352",
        "version_major": 2,
        "version_minor": 0
       },
@@ -153,36 +175,22 @@
    "source": [
     "import general.libinstall\n",
     "import general.uiutils\n",
-    "%pylab inline\n",
+    "import general.utils as utils\n",
+    "utils.reload()\n",
+    "%matplotlib inline\n",
     "general.uiutils.loadGemMultiUI()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-11-12T09:41:37.438665Z",
      "start_time": "2021-11-12T09:41:37.420944Z"
-    },
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4fd6b01e8584383b23c32c9b208dc4d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='file', options=(('211110_10-16-04-Home1', '211110_10-16-04-Home1')…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import  general.utils\n",
     "import result_analyse.resultloader\n",
@@ -210,7 +218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -224,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
@@ -267,8 +275,13 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0f91b223a9be7f82bfd164eb4b10e5e1c532d3ceac636b749a2ce370dda12911"
+   }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
