--- a/Gem-Compare-Multi-Run.ipynb
+++ b/Gem-Compare-Multi-Run.ipynb
@@ -22,26 +22,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 97.23it/s]\n"
+      "100%|██████████| 16/16 [00:00<00:00, 27.47it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=================== The required libraries have been  installed ===================\n",
-      "Populating the interactive namespace from numpy and matplotlib\n"
+      "=================== The required libraries have been  installed ===================\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4b8f47361a64c51b2083867da3be2fb",
+       "model_id": "775a6b855f394c41b1a11e2a1f24a5be",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='dataset', options=('one_event_eval_gen', 'Home1', 'Home2', 'A4H', …"
+       "interactive(children=(Dropdown(description='dataset', options=('Aruba', 'Home1', 'Home2', 'A4H', 'ward', 'VanK…"
       ]
      },
      "metadata": {},
@@ -49,9 +48,12 @@
     }
    ],
    "source": [
+    "import general.utils as utils\n",
+    "utils.reload()\n",
     "import general.libinstall\n",
     "import general.uiutils\n",
-    "%pylab inline\n",
+    "\n",
+    "%matplotlib inline\n",
     "#%pylab widget\n",
     "general.uiutils.loadGemMultiUI()"
    ]
@@ -66,7 +68,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.13 (conda)",
    "language": "python",
    "name": "python3"
   },
@@ -80,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
@@ -123,6 +125,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0f91b223a9be7f82bfd164eb4b10e5e1c532d3ceac636b749a2ce370dda12911"
+   }
   }
  },
  "nbformat": 4,
