--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -80,6 +80,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "3ba5c4ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "a=pd.Timestamp('2009-08-09 02:06:04.875001').value\n",
+    "b=pd.Timestamp('2009-08-09 02:08:04.875001').value\n",
+    "from intervaltree.intervaltree import IntervalTree\n",
+    "tree = IntervalTree()\n",
+    "tree[a:b]='s'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3208848-4dc2-4eee-b1df-b6f777b5cec3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "c1a8c46a",
    "metadata": {
@@ -1079,7 +1102,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1136,6 +1159,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
+   }
   }
  },
  "nbformat": 4,
