--- a/result_viewer3.ipynb
+++ b/result_viewer3.ipynb
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-06-02T16:07:01.522580Z",
@@ -1533,13 +1533,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "%pylab is deprecated, use %matplotlib inline and import the required libraries.\n",
       "Populating the interactive namespace from numpy and matplotlib\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6ea8fa5734d4c16822da7a453cc5058",
+       "model_id": "4e76bae6c70141478ec5765365ad5e7f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2033,7 +2034,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.13",
    "language": "python",
    "name": "python3"
   },
@@ -2047,7 +2048,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
@@ -2090,6 +2091,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0f91b223a9be7f82bfd164eb4b10e5e1c532d3ceac636b749a2ce370dda12911"
+   }
   }
  },
  "nbformat": 4,
