new update aaai2023

--- a/All.ipynb
+++ b/All.ipynb
@@ -15,107 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-11-23T10:55:41.517374Z",
      "start_time": "2021-11-23T10:55:39.391992Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 16/16 [00:00<00:00, 816.04it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=================== The required libraries have been  installed ===================\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e93ee4b258ae4cdcae76b2eff479c246",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='segmentation', options={\"FixedEventWindow [{'size': 25}, {'shift':…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "tf.config.set_visible_devices([], 'GPU')\n",
     "import general.utils as utils\n",
     "utils.reload()\n",
-    "\n",
     "import general.libinstall\n",
     "import general.uiutils\n",
-    "\n",
     "general.uiutils.runPipelineUI()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# GEM-Details\n",
-    "You can select a specific run and it will show the evaluation information and display charts for precision, recall and f1 measure."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-11-12T16:44:59.326471Z",
-     "start_time": "2021-11-12T16:44:58.070360Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 16/16 [00:00<00:00, 26.44it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=================== The required libraries have been  installed ===================\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb7be468bd7a45b48cfae10a129ab4f5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='file', options=(('220815_02-09-05-Home1-s=2', '220815_02-09-05-Hom…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import general.libinstall\n",
-    "import general.uiutils\n",
-    "%matplotlib inline\n",
-    "general.uiutils.loadGemMetricUI()"
    ]
   },
   {
@@ -128,50 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-11-15T17:10:28.980433Z",
      "start_time": "2021-11-15T17:10:28.932900Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 16/16 [00:00<00:00, 991.33it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=================== The required libraries have been  installed ===================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c50d3b6b1384821b97793bb2f7f5352",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='dataset', options=('one_event_eval_gen', 'Home1', 'Home2', 'A4H', …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import general.libinstall\n",
     "import general.uiutils\n",
@@ -182,38 +59,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-11-12T09:41:37.438665Z",
-     "start_time": "2021-11-12T09:41:37.420944Z"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import  general.utils\n",
-    "import result_analyse.resultloader\n",
-    "import result_analyse.visualisation as vs\n",
+    "# Metric Details \n",
     "\n",
-    "from ipywidgets import interact, interactive, fixed, interact_manual,widgets\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "@interact_manual\n",
-    "def result_selector(file=result_analyse.resultloader.get_runs()):\n",
-    "    if(file==None):return\n",
-    "    print('Analysing ',file)\n",
-    "    general.utils.convert2SED(file)\n",
-    "    print('finished')\n"
+    "(not fully working)\n",
+    "You can select a specific run and it will show the evaluation information and display charts for precision, recall and f1 measure."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-11-12T16:44:59.326471Z",
+     "start_time": "2021-11-12T16:44:58.070360Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import general.libinstall\n",
+    "import general.uiutils\n",
+    "%matplotlib inline\n",
+    "general.uiutils.loadGemMetricUI()"
+   ]
   }
  ],
  "metadata": {
